08/10/2004  version 0.2 pre16   Ian Lewis <IanLewis@member.fsf.org>

    * Removed code in the TabbedView that assumed that the DocumentView was
      the same reference as the document view component.
    * Made the search dialog get the parent frame so it works better now.
    * Removed the replace field since it doesn't work.

07/30/2004  version 0.2 pre15   Ian Lewis <IanLewis@member.fsf.org>

    * Added replace field to the search dialog.

07/27/2004  version 0.2 pre14   Ian Lewis <IanLewis@member.fsf.org>

    * Added a very preliminary search and replace dialog to the source view.
      jsXe now requires the gnu.regexp package

07/26/2004  version 0.2 pre13   Ian Lewis <IanLewis@member.fsf.org>

    * Implemented actions by putting them in ActionSets and having them be
      registered with the jsXe application. This will allow implementation of
      a feature to allow users to set key mnemonics (shortcuts) to actions
      easier.
    * Fixed a bug that caused jsXe to not allow you to open documents that
      were not well formed.
    * Implemented the soft-tabs feature in the source view.

07/24/2004  version 0.2 pre12   Ian Lewis <IanLewis@member.fsf.org>

    * The recent files menu now will form multiple consecutive menus if there
      are a lot of recent files in the list.

07/23/2004  version 0.2 pre11   Ian Lewis <IanLewis@member.fsf.org>

    * Added support for a recent files list that can allow users to open
      files they have recently used.
    * Added an option to allow the user to specify the number of recent files
      that jsXe remembers
    * When jsXe opens a file now it checks if it's in the recent files list
      and opens it with the remembered properties automatically

06/23/2004  version 0.2 pre10   Ian Lewis <IanLewis@member.fsf.org>

    * Fixed problem where the node did not appear to be selected after drag and
      drop but was. Needed to add the node to the selection model.